--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "amqplib": "^0.5.2",
     "bunyan": "^1.8.12",
-    "chronobank-smart-contracts": "git+https://github.com/ChronoBank/SmartContracts.git#develop",
+    "chronobank-smart-contracts": "1.1.*",
     "dotenv": "^4.0.0",
     "eth-crypto": "^1.0.0",
     "lodash": "^4.17.4",
@@ -32,13 +32,15 @@
   "devDependencies": {
     "babel-eslint": "^8.0.2",
     "chai": "^4.1.1",
-    "chronobank-smart-contracts-atomic-swap": "git+https://github.com/ChronoBank/LXsidechain-sc.git#develop",
     "eslint": "^4.6.1",
     "eslint-plugin-chronobank": "github:chronobank/eslint-plugin-chronobank",
     "ethereumjs-wallet": "^0.6.0",
+    "fs-extra": "^7.0.0",
+    "ganache-cli": "^6.1.8",
     "mocha": "^3.5.0",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "truffle": "^4.1.14"
   }
 }
