https://chronobank.atlassian.net/browse/MD-837 - middleware - tests / eth / sidechain / environment

--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "middleware_eth.sidechain",
   "version": "1.0.0",
   "main": "index.js",
-  "requirements": {
-
-  },
+  "requirements": {},
   "dependencies": {
     "amqplib": "^0.5.2",
     "bunyan": "^1.8.12",
@@ -27,7 +25,7 @@
     "lint": "node ./node_modules/eslint/bin/eslint.js -c .eslintrc.js --ext .js --fix --ignore-path .eslintignore .",
     "deploy:swap_contracts": "cd ./node_modules/chronobank-smart-contracts-atomic-swap && npm i &&  node --max_old_space_size=8000 ./node_modules/truffle/build/cli.bundled.js migrate",
     "deploy:contracts": "cd ./node_modules/chronobank-smart-contracts && npm i &&  node --max_old_space_size=8000 ./node_modules/truffle/build/cli.bundled.js migrate",
-    "test": "node ./node_modules/mocha/bin/mocha -t 90000 tests",
+    "test": "node ./node_modules/mocha/bin/mocha -t 90000 tests/index.js",
     "migrate_red": "node ./node_modules/middleware_service.sdk/migrate.js run"
   },
   "author": "chronobank",
@@ -42,6 +40,7 @@
     "fs-extra": "^7.0.0",
     "ganache-cli": "^6.1.8",
     "mocha": "^3.5.0",
+    "npx": "^10.2.0",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "sha256": "^0.2.0",
