--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "dotenv": "^4.0.0",
     "eth-crypto": "^1.0.0",
     "lodash": "^4.17.4",
-    "middleware_service.sdk": "github:chronobank/middleware-service-sdk",
     "middleware_common_infrastructure": "^1.0.2",
+    "middleware_service.sdk": "github:chronobank/middleware-service-sdk",
     "mongoose": "^4.11.11",
     "mongoose-long": "^0.1.1",
     "net": "^1.0.2",
     "require-all": "^2.2.0",
     "truffle-contract": "^3.0.4",
     "uniqid": "^4.1.1",
-    "web3": "^0.20.0",
-    "web3-provider-engine": "^13.8.0"
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "lint": "node ./node_modules/eslint/bin/eslint.js -c .eslintrc.js --ext .js --fix --ignore-path .eslintignore .",
